--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "tailwindcss": "^4.1.7"
   },
   "dependencies": {
+    "@rails/actiontext": "^8.0.200",
     "@tailwindcss/cli": "^4.1.7",
     "browserslist": "^4.24.5",
     "caniuse-lite": "^1.0.30001718",
@@ -32,6 +33,7 @@
     "picocolors": "^1.1.1",
     "postcss-value-parser": "^4.2.0",
     "source-map-js": "^1.2.1",
+    "trix": "^2.1.15",
     "update-browserslist-db": "^1.1.3"
   }
 }
