--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,33 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+  email: "user1@example.com"
+  encrypted_password: <%= Devise::Encryptor.digest(User, "password123") %>
+  first_name: "John"
+  last_name: "Doe"
+  role: "client"
+  consultant_role: false
+  created_at: <%= Time.current %>
+  updated_at: <%= Time.current %>
 # column: value
 #
-two: {}
-# column: value
+two:
+  email: "user2@example.com"
+  encrypted_password: <%= Devise::Encryptor.digest(User, "password123") %>
+  first_name: "Jane"
+  last_name: "Smith"
+  role: "consultant"
+  consultant_role: true
+  created_at: <%= Time.current %>
+  updated_at: <%= Time.current %>
+
+admin:
+  email: "admin@example.com"
+  encrypted_password: <%= Devise::Encryptor.digest(User, "password123") %>
+  first_name: "Admin"
+  last_name: "User"
+  role: "admin"
+  consultant_role: true
+  created_at: <%= Time.current %>
+  updated_at: <%= Time.current %>
